--- a/style.css
+++ b/style.css
@@ -7,6 +7,19 @@ h1 {
 }
 
 header {
-  height: 300px;
+  height: 200px;
   background-color: peachpuff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  background-color: blue;
+  color: white;
+  display: grid;
+  place-items: center;
 }
