--- a/style.css
+++ b/style.css
@@ -23,3 +23,16 @@ header {
   display: grid;
   place-items: center;
 }
+
+.yearbook {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 1rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  border: 2px solid black;
+}
